log
Fri, May  2, 2025  8:36:19 PM: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:45:18: error: statement with no effect [-Werror=unused-value]
     new->current == NULL;
                  ^
treemap.c:46:15: error: statement with no effect [-Werror=unused-value]
     new->root == NULL;
               ^
cc1.exe: all warnings being treated as errors
5729e4d
Fri, May  2, 2025  8:43:19 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
e824bca
Sat, May  3, 2025 12:53:56 PM: 
 treemap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:88:13: error: implicit declaration of function 'lower_than_int' [-Werror=implicit-function-declaration]
         if (lower_than_int(tree->current->pair->key, key) == 0){ //si el dato es menor al del arbol
             ^~~~~~~~~~~~~~
treemap.c:92:23: error: statement with no effect [-Werror=unused-value]
                 valor == 0;
                 ~~~~~~^~~~
treemap.c:99:23: error: statement with no effect [-Werror=unused-value]
                 valor == 0;
                 ~~~~~~^~~~
cc1.exe: all warnings being treated as errors
6283540
Sat, May  3, 2025 12:54:10 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:88:13: error: implicit declaration of function 'lower_than_int' [-Werror=implicit-function-declaration]
         if (lower_than_int(tree->current->pair->key, key) == 0){ //si el dato es menor al del arbol
             ^~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
8abd545
